| Summary: | ASTERISK-27236: Segfault ast_channel_name (chan=0x0) at channel_internal_api.c:478 during T.38 Fax Receive | ||
| Reporter: | Ross Beer (rossbeer) | Labels: | fax pjsip |
| Date Opened: | 2017-08-31 05:37:00 | Date Closed: | 2017-09-06 06:50:52 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip Resources/res_fax Resources/res_pjsip_t38 |
| Versions: | GIT | Frequency of Occurrence | Frequent |
| Related Issues: | |||
| Environment: | Fedora 23 | Attachments: | ( 0) core.2017-08-31T10-58-30+0100-thread1.txt ( 1) core.2017-08-31T11-14-13+0100-thread1.txt |
| Description: | Segfault when receiving faxes via T.38
{noformat} #0 0x00000000004cc917 in ast_channel_name (chan=0x0) at channel_internal_api.c:478 #1 0x00007f5c9c1afb7b in t38_reinvite_response_cb (session=session@entry=0x7f5cf459dc20, rdata=<optimized out>) at res_pjsip_t38.c:305 status = {code = 200, reason = {ptr = <optimized out>, slen = <optimized out>}} state = 0x7f5cf45f1da0 session_media = 0x0 __PRETTY_FUNCTION__ = "t38_reinvite_response_cb" {noformat} At the time of the crash, the CLI shows the following: {noformat} res_fax.c:1947 receivefax_t38_init: channel 'PJSIP/<HOST>-00000036' timed-out during the T.38 negotiation. {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-08-31 05:37:02.195-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Ross Beer (rossbeer) 2017-09-01 05:31:44.994-0500 The issue looks related to issue ASTERISK-27110 and change https://gerrit.asterisk.org/#/c/6165/ By: Friendly Automation (friendly-automation) 2017-09-06 06:50:54.075-0500 Change 6387 merged by Jenkins2: res_pjsip_t38: Make t38_reinvite_response_cb tolerant of NULL channel [https://gerrit.asterisk.org/6387|https://gerrit.asterisk.org/6387] By: Friendly Automation (friendly-automation) 2017-09-06 06:55:03.170-0500 Change 6384 merged by Jenkins2: res_pjsip_t38: Make t38_reinvite_response_cb tolerant of NULL channel [https://gerrit.asterisk.org/6384|https://gerrit.asterisk.org/6384] By: Friendly Automation (friendly-automation) 2017-09-06 07:17:41.674-0500 Change 6385 merged by Jenkins2: res_pjsip_t38: Make t38_reinvite_response_cb tolerant of NULL channel [https://gerrit.asterisk.org/6385|https://gerrit.asterisk.org/6385] By: Friendly Automation (friendly-automation) 2017-09-06 07:21:07.840-0500 Change 6386 merged by Jenkins2: res_pjsip_t38: Make t38_reinvite_response_cb tolerant of NULL channel [https://gerrit.asterisk.org/6386|https://gerrit.asterisk.org/6386] | ||